; ModuleID = '/home/carl/AnghaBench/radare2/shlr/grub/partmap/extr_sunpc.c_grub_sun_is_valid.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/grub/partmap/extr_sunpc.c_grub_sun_is_valid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.grub_sun_pc_block = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.grub_sun_pc_block*)* @grub_sun_is_valid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @grub_sun_is_valid(%struct.grub_sun_pc_block* %0) #0 {
  %2 = alloca %struct.grub_sun_pc_block*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store %struct.grub_sun_pc_block* %0, %struct.grub_sun_pc_block** %2, align 8
  store i32 0, i32* %4, align 4
  %5 = load %struct.grub_sun_pc_block*, %struct.grub_sun_pc_block** %2, align 8
  %6 = bitcast %struct.grub_sun_pc_block* %5 to i32*
  store i32* %6, i32** %3, align 8
  br label %7

7:                                                ; preds = %18, %1
  %8 = load i32*, i32** %3, align 8
  %9 = load %struct.grub_sun_pc_block*, %struct.grub_sun_pc_block** %2, align 8
  %10 = getelementptr inbounds %struct.grub_sun_pc_block, %struct.grub_sun_pc_block* %9, i64 1
  %11 = bitcast %struct.grub_sun_pc_block* %10 to i32*
  %12 = icmp ult i32* %8, %11
  br i1 %12, label %13, label %21

13:                                               ; preds = %7
  %14 = load i32*, i32** %3, align 8
  %15 = load i32, i32* %14, align 4
  %16 = load i32, i32* %4, align 4
  %17 = xor i32 %16, %15
  store i32 %17, i32* %4, align 4
  br label %18

18:                                               ; preds = %13
  %19 = load i32*, i32** %3, align 8
  %20 = getelementptr inbounds i32, i32* %19, i32 1
  store i32* %20, i32** %3, align 8
  br label %7

21:                                               ; preds = %7
  %22 = load i32, i32* %4, align 4
  %23 = icmp ne i32 %22, 0
  %24 = xor i1 %23, true
  %25 = zext i1 %24 to i32
  ret i32 %25
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
